--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <div class="form-label" style="width: 50px;">N = </div>
                 <input id="GiaTri" type="text" class="form-control" name="n" value="">
             </div>
+            <br>
             <div class="section text-center" id="btnketQua">
                 <a  class="btn btn-primary">Kết quả</a>
             </div>
@@ -31,6 +32,34 @@
   
     </div>
       
+
+    <br>
+    <br>
+    <h1>bài tập: in ra các số nguyên tố từ 1 tới giá trị input </h1>
+<div class="from-group">
+  <p>Nhập só </p>
+  <input class="from-control w-25 mb-2 " id="nhapSo">
+  <button class="btn btn-warning" id="ketQua"> in số nguyên tố</button>
+  <br>
+  <br>
+  <div class="alert alert-warning" id="ketQua1">số nguyen tố</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
